добавил в градл возможность использовать свитч патерн матчинг